# Tuya-Smart-Taskbar

./: .gitignore  CHANGELOG.md  README.md  biome.json  build.js  config.html  main.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json
.github/workflows/: build.yml  ci.yml  create-tag.yml  lint.yml  main.yml  release.yml  setup.yml
assets/: icon.icns
frontend/pages/: about.html  config.html
html/: about.html  config.html
pages/: about.html  config.html
scripts/: build.ts  setup-xubuntu.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  update.rs
src-tauri/src/commands/: app.rs  config.rs  devices.rs  mod.rs
src-tauri/src/config/: manager.rs  mod.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/tuya/: auth.rs  client.rs  mod.rs  token.rs  types.rs
src/main/: config.ts  index.ts  ipc.ts  tray.ts  windows.ts
src/main/tuya/: context.ts  devices.ts  index.ts
src/preload/: index.ts
src/renderer/: about.ts  config.ts  global.d.ts
src/types/: config.ts  electron.ts  index.ts  tuya.ts
