[package]
name = "tuya-smart-taskbar"
version = "2.0.0"
description = "Windows Taskbar App for controlling Tuya Smart Devices"
authors = ["Zahin A. Adib <adib23704@gmail.com>"]
license = "MIT"
repository = "https://github.com/Adib23704/Tuya-Smart-Taskbar"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
urlencoding = "2.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
directories = "5.0"
auto-launch = "0.5"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
open = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
